--- a/.config
+++ b/.config
@@ -106,8 +106,8 @@ CONFIG_PACKAGE_luci-app-mwan3helper=y
 CONFIG_PACKAGE_luci-app-vsftpd=n
 # CONFIG_PACKAGE_aliyundrive-webdav=y
 # CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
-CONFIG_PACKAGE_alist=y
-CONFIG_PACKAGE_luci-app-alist=y
+# CONFIG_PACKAGE_alist=y
+# CONFIG_PACKAGE_luci-app-alist=y
 # CONFIG_PACKAGE_luci-app-baidupcs-web=y
 # CONFIG_PACKAGE_luci-app-gowebdav=y
 # CONFIG_PACKAGE_luci-app-hd-idle=y
