--- a/.config
+++ b/.config
@@ -72,30 +72,31 @@ CONFIG_PACKAGE_luci-app-argon-config=y
 # CONFIG_PACKAGE_lua-maxminddb=y
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_hysteria=y
-CONFIG_PACKAGE_luci-app-ttnode=y
-CONFIG_PACKAGE_adguardhome=y
-CONFIG_PACKAGE_luci-app-adguardhome=y
+# CONFIG_PACKAGE_luci-app-ttnode=y
+# CONFIG_PACKAGE_adguardhome=y
+# CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 # CONFIG_PACKAGE_luci-app-jd-dailybonus=y
-CONFIG_PACKAGE_ddnsto=y
-CONFIG_PACKAGE_luci-app-ddnsto=y
+# CONFIG_PACKAGE_ddnsto=y
+# CONFIG_PACKAGE_luci-app-ddnsto=y
 # CONFIG_PACKAGE_luci-app-dnsfilter=y
 # CONFIG_PACKAGE_luci-app-clash=y
 CONFIG_PACKAGE_luci-app-openclash=y
-CONFIG_PACKAGE_smartdns=y
-CONFIG_PACKAGE_luci-app-smartdns=y
+# CONFIG_PACKAGE_smartdns=y
+# CONFIG_PACKAGE_luci-app-smartdns=y
 # CONFIG_PACKAGE_oscam=y
 # CONFIG_PACKAGE_luci-app-oscam=y
 # CONFIG_PACKAGE_tvheadend=y
-CONFIG_PACKAGE_luci-app-serverchan=y
+# CONFIG_PACKAGE_luci-app-serverchan=y
+CONFIG_PACKAGE_luci-app-pushbot=y
 # CONFIG_PACKAGE_luci-app-uugamebooster=y
-CONFIG_PACKAGE_luci-app-udpxy=y
+# CONFIG_PACKAGE_luci-app-udpxy=y
 CONFIG_PACKAGE_igmpproxy=y
-CONFIG_PACKAGE_luci-app-uhttpd=y
+# CONFIG_PACKAGE_luci-app-uhttpd=y
 # CONFIG_PACKAGE_luci-app-frpc=y
 # CONFIG_PACKAGE_luci-app-iptvhelper=y
 # CONFIG_PACKAGE_luci-app-nps=y
-CONFIG_PACKAGE_luci-app-familycloud=y
+# CONFIG_PACKAGE_luci-app-familycloud=y
 # CONFIG_PACKAGE_luci-lib-docker=y
 CONFIG_PACKAGE_luci-app-dockerman=n
 CONFIG_PACKAGE_luci-app-mwan3helper=y
@@ -106,8 +107,6 @@ CONFIG_PACKAGE_luci-app-mwan3helper=y
 CONFIG_PACKAGE_luci-app-vsftpd=n
 # CONFIG_PACKAGE_aliyundrive-webdav=y
 # CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
-# CONFIG_PACKAGE_alist=y
-# CONFIG_PACKAGE_luci-app-alist=y
 # CONFIG_PACKAGE_luci-app-baidupcs-web=y
 # CONFIG_PACKAGE_luci-app-gowebdav=y
 # CONFIG_PACKAGE_luci-app-hd-idle=y
