--- a/.config
+++ b/.config
@@ -18,7 +18,7 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=935
 
 # 编译固件类型:
 CONFIG_EFI_IMAGES=y
-# CONFIG_GRUB_IMAGES=y
+CONFIG_GRUB_IMAGES=y
 CONFIG_VMDK_IMAGES=n
 
 # IPv6支持:
