--- a/.config
+++ b/.config
@@ -73,8 +73,8 @@ CONFIG_PACKAGE_luci-app-argon-config=y
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_hysteria=y
 # CONFIG_PACKAGE_luci-app-ttnode=y
-CONFIG_PACKAGE_adguardhome=y
-CONFIG_PACKAGE_luci-app-adguardhome=y
+# CONFIG_PACKAGE_adguardhome=y
+# CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 # CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 # CONFIG_PACKAGE_ddnsto=y
