--- a/.config
+++ b/.config
@@ -147,6 +147,8 @@ CONFIG_PACKAGE_vim-fuller=y
 CONFIG_PACKAGE_wget=y
 CONFIG_PACKAGE_xz=y
 CONFIG_SOCAT_SSL=y
+CONFIG_PACKAGE_snmp=y
+CONFIG_PACKAGE_snmpd=y
 
 # 取消编译VMware镜像以及镜像填充 (不要删除被缩进的注释符号):
 # CONFIG_TARGET_IMAGES_PAD is not set
