--- a/.config
+++ b/.config
@@ -120,6 +120,8 @@ CONFIG_PACKAGE_luci-app-ipsec-vpnd=n
 CONFIG_PACKAGE_luci-i18n-ipsec-vpnd-zh-cn=n
 CONFIG_PACKAGE_luci-app-openvpn-server=n
 CONFIG_PACKAGE_luci-i18n-openvpn-server-zh-cn=n
+CONFIG_PACKAGE_luci-app-zerotier=n
+CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=n
 # CONFIG_PACKAGE_luci-app-netspeedtest=y
 CONFIG_PACKAGE_luci-app-eqos=y
 CONFIG_PACKAGE_luci-app-oaf=y
